--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" type="text/css" href="ITAMAR(CSS).css" />
-    <script type="text/javascript" src="ITAMAR(JAVASCRIPT).js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script type="text/javascript" src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -367,3 +367,4 @@
     </footer>
 </body>
 </html>
+
